--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_storage: ^10.2.6
   galleryimage: ^1.1.0
   email_validator: ^2.0.1
+  like_button: ^2.0.4
 
 dev_dependencies:
   flutter_test:
